--- a/template/Fallstudie/Fallstudie.tex
+++ b/template/Fallstudie/Fallstudie.tex
@@ -1,17 +1,20 @@
 \input{Fallstudie/Einleitung/Einleitung.tex}
-\input{Fallstudie/Umweltbelastung/Umweltbelastung.tex}
-\input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
+\input{Fallstudie/Hauptteil/Hauptteil.tex}
+\input{Fallstudie/Schluss/Schluss.tex}
+
+% \input{Fallstudie/Umweltbelastung/Umweltbelastung.tex}
+% \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
 
-\section{Assistenzsysteme}
-\subsection{Keine Assistenzsysteme}
-\subsection{Assistenzsysteme}
-\subsection{Teilautomatisierung}
-\subsection{Bedingte Automatisierung}
-\subsection{Hochautomatisierung}
-\subsection{Vollautomatisierung}
+% \section{Assistenzsysteme}
+% \subsection{Keine Assistenzsysteme}
+% \subsection{Assistenzsysteme}
+% \subsection{Teilautomatisierung}
+% \subsection{Bedingte Automatisierung}
+% \subsection{Hochautomatisierung}
+% \subsection{Vollautomatisierung}
 
-\input{Fallstudie/Problemlösung durch Assistenzsysteme/Problemlösung durch Assistenzsysteme.tex}
+% \input{Fallstudie/Problemlösung durch Assistenzsysteme/Problemlösung durch Assistenzsysteme.tex}
 
 
 % !!! hier kann man Beispiele aufführen, wie zb Bus, PKW, LKW; Traktor
@@ -29,82 +32,7 @@
 % !!! Welche 
 
 
-% Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
-% Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
-% \begin{itemize}
-% 	\item Stufe 0 (Keine Automation)
-% 	\item Stufe 1 (Assistenzsysteme)
-% 	\item Stufe 2 (Teilautomatisierung)
-% 	\item Stufe 3 (Bedingte Automatisierung)
-% 	\item Stufe 4 (Hochautomatisierung)
-% 	\item Stufe 5 (Vollautomatisierung)
-% \end{itemize}
-% \subsubsection{Was passiert in den Stufen?}
-% Die Stufen unterscheiden sich im wesentlichen nur durch die Anzahl der Automatisierungsgrade.
 
-% \vspace{0.5cm}
-
-% In der Stufe 0 (Keine Automation):
-% \begin{itemize}
-% 	\item keine Assistenzsysteme
-% 	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-% 	\item Fahrer ist unter permanenter Kontrolle
-% \end{itemize}
-
-% \vspace{0.5cm}
-
-% In der Stufe 1 (Assistenzsysteme):
-% \begin{itemize}
-% 	\item Assistenzsysteme wie \ac{GRA} oder eine Berganfahrhilfe
-% 	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
-% 	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-% 	\item das \ac{Kfz} ist unter permanenter Kontrolle des Fahrers
-% \end{itemize}
-
-% \vspace{0.5cm}
-
-% In der Stufe 2 (Teilautomatisierung):
-% \begin{itemize}
-% 	\item Assistenzsysteme, wie der Spurführungsassistent oder Stauassistent
-% 	      \begin{itemize}
-% 		      \item automatisch bremsen
-% 		      \item automatisch beschleunigen
-% 		      \item automatisch lenken
-% 	      \end{itemize}
-% 	\item \ac{Kfz} kann Fahraufgaben teilautomatisiert übernehmen
-% 	\item Fahrer kann sich für kurze Zeit von den Fahraufgaben abwenden
-% 	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
-% \end{itemize}
-
-% \vspace{0.5cm}
-
-% In der Stufe 3 (Bedingte Automatisierung):
-% \begin{itemize}
-% 	\item hochautomatisierte Assistenzsysteme
-% 	\item \ac{Kfz} kann Fahraufgaben unter bestimmten Voraussetzungen vollständig übernehmen
-% 	\item Fahrer kann sich unter bestimmten Voraussetzungen dauerhaft von den Fahraufgaben abwenden
-% 	\item Fahrer muss innerhalb wenigen Sekunden die Fahraufgabe übernehmen können
-% \end{itemize}
-
-% \vspace{0.5cm}
-
-% In der Stufe 4 (Hochautomatisierung):
-% \begin{itemize}
-% 	\item hochautomatisierte Assistenzsysteme
-% 	\item \ac{Kfz} kann Fahraufgaben in hochkomplexen Verkehrssituationen vollständig übernehmen
-% 	\item Fahrer dauerhaft von den Fahraufgaben abwenden
-% 	\item Fahrer muss fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können
-% \end{itemize}
-
-% \vspace{0.5cm}
-
-% In der Stufe 5 (Vollautomatisierung):
-% \begin{itemize}
-% 	\item hochautomatisierte Assistenzsysteme
-% 	\item \ac{Kfz} übernimmt alle Fahraufgaben vollständig
-% 	\item Fahrer ist nicht erforderlich
-% 	\item alle Personen im Wagen werden zu Passagieren
-% \end{itemize}
 
 
 
