--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -9,7 +9,7 @@ Moderne Kraftfahrzeuge werden aus folgenden Teilsysteme gebildet:
 \end{itemize}
 
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\caption{Teilsysteme des Kraftfahrzeugs}
 	\includegraphics[scale=0.1]{assets/figures/Teilsysteme des Kraftfahrzeugs.jpg}
 	\begin{flushleft}
@@ -73,6 +73,6 @@ Beispiele für Regelungen sind:
 	      Sollte die Temperatur über der Solltemperatur liegen, wird die Klimaautomatik auf Kühlen gestellt.
 	\item Lichtautomatik: Es gibt eine Schwelle bei der das Licht eingeschaltet werden soll.
 	      Es gemessen wie hell das Umgebungslicht ist.
-	      Sollte das Umgebungslicht zu gering sein wie \ac*{zb} im Tunnel oder bei Dämmerung wird das Licht eingeschaltet.
-	      Sobald das Umgebungslicht wieder hell genug ist \ac*{zb} beim verlassen des Tunnels oder bei Sonnenaufgang, wird das Licht wieder ausgeschaltet.
+	      Sollte das Umgebungslicht zu gering sein wie zum Beispiel im Tunnel oder bei Dämmerung wird das Licht eingeschaltet.
+	      Sobald das Umgebungslicht wieder hell genug ist zum Beispiel beim verlassen des Tunnels oder bei Sonnenaufgang, wird das Licht wieder ausgeschaltet.
 \end{itemize}
