--- a/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
@@ -1,4 +1,4 @@
-\chapter{Kraftfahrzeuge}
+\subsection{Kraftfahrzeuge}
 % ! Zitat
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
@@ -8,5 +8,8 @@ Auch Züge oder Trambahnen gehören nicht in in die Kategorien, da sie an Bahngl
 
 \input{Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex}
 \input{Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex}
+\input{Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex}
 \input{Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex}
-\input{Fallstudie/Kraftfahzeuge/Assistenzsysteme/Asisstenzsysteme.tex}
+\input{Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Bedingungen.tex}
+
+
