--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -1,4 +1,4 @@
-\section{Teilsysteme von Kraftfahrzeugen}
+\subsection{Teilsysteme von Kraftfahrzeugen}
 Moderne Kraftfahrzeuge werden aus folgenden Teilsysteme gebildet:
 \begin{itemize}
 	\item Antriebseinheit
@@ -19,7 +19,7 @@ Moderne Kraftfahrzeuge werden aus folgenden Teilsysteme gebildet:
 \end{figure}
 
 
-\subsection{Antriebseinheit}
+\subsubsection{Antriebseinheit}
 Die Antriebseinheit wandelt die zugeführte Energie in die erforderliche Antriebsenergie um.
 \footnote{Westermann S. 19}
 Diese Umwandlung wird im Motor durchgeführt.
@@ -30,23 +30,23 @@ Die Energieerzeugung wird durch die Verbrennung von Kraftstoff erzeugt.
 Dazu wird ein Kraftstoff-Luft-Gemisch in einem Brennraum mit Kolben zur Verbrennung verwendet.
 Durch die Verbrennung steigt der Druck im Brennraum stark an und bewegt einen Kolben.
 
-\subsection{Arbeitseinheit}
+\subsubsection{Arbeitseinheit}
 Die Arbeitseinheit ist die Verbindung zwischen den Antriebsrädern und der Fahrbahn.
 Durch die Bewegung der Antriebsrädern wird das Kraftfahrzeug in Bewegung gesetzt.
 
-\subsection{Energieübertragungseinheit}
+\subsubsection{Energieübertragungseinheit}
 Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsart und Bewegungsgeschwindigkeit zur Arbeitseinheit weiter.
 \footnote{Westermann S. 19}
 
 Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie in benötigt werden.
 Beispiel hierfür sind Kabel die Elektrische Energie leiten oder Wellen, Zahnräder oder Riemen die mechanische Energie weiterleiten.
 
-\subsection{Stütz- und Trageeinheit}
+\subsubsection{Stütz- und Trageeinheit}
 Stütz- und Trageeinheit der Rahmen oder der selbsttragende Aufbau des Kraftfahrzeuges haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
 \footnote{Westermann S. 19}
 
 
-\subsection{Steuerungs- und Regelungseinheit}
+\subsubsection{Steuerungs- und Regelungseinheit}
 Die Steuerungs- und Regelungseinheit beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung
 \footnote{Westermann S. 19}
 
