--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -1,4 +1,4 @@
-\section{Autonomes Fahren}
+\subsection{Autonomes Fahren}
 Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
 Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
 \begin{itemize}
