--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -1,4 +1,4 @@
-\section{Fahrzeugklassen}
+\subsection{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
 Die EU Kommission hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
