--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -1,4 +1,4 @@
-\section{Umweltbelastungen durch Kraftfahrzeuge}
+\subsection{Umweltbelastungen durch Kraftfahrzeuge}
 Kraftfahrzeuge belasten die Umwelt auf verschiedene Arten.
 Hierunter fallen
 die Erzeugung von Rohstoffen für Materialien die für die Produktion von Kraftfahrzeugen benötigt werden,
