--- a/template/document.tex
+++ b/template/document.tex
@@ -19,7 +19,8 @@
 \usepackage{lmodern}
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
-\setuptoc{toc}{totoc}
+% adds the toc to toc
+% \setuptoc{toc}{totoc}
 %start the document
 \begin{document}
 \parindent 0pt
